--- a/src/webClient/index.html
+++ b/src/webClient/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 <head lang="en">
-    <title>Angular-http Client</title>
+    <meta charset="UTF-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-    <script>
-        var app = angular.module("myApp", []);
-
-        app.controller("collectBookData", function($scope, $http) {
-            $http.get('http://localhost:8080/bookservice/getbook/book%231').
-                    success(function (response) {
-//                        $scope.debug = JSON.stringify(data);
-                        alert(JSON.stringify(response));
-                        $scope.debug = response;
-            }).error(function (data, status, headers, config) {
-                        console.log(status);
-                        console.log(data);
-                        console.log(headers);
-                        console.log(config);
-            });
-        });
-    </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-resource.min.js"></script>
+    <title></title>
 </head>
-<body>
-<div ng-controller="collectBookData">
-    <p>{{debug.bookName}}</p>
-</div>
+<body ng-app="sampleApp">
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <ul class="nav">
+                <li><a href="#AddNewOrdert"> Add New Order </a></li>
+                <li><a href="#ShowOrders"> Show Order </a></li>
+            </ul>
+        </div>
+        <div class="col-md-9">
+            <div ng-view></div>
+        </div>
+
+    </div>
+
+</div><!-- /.container -->
+
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/tmp.js"></script>
+
 </body>
 </html>
