--- a/src/webClient/index.html
+++ b/src/webClient/index.html
@@ -2,12 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-resource.min.js"></script>
+
     <title></title>
 </head>
-<body ng-app="sampleApp">
+<body ng-app="ngClient">
 
 <div class="container">
     <div class="row">
@@ -15,6 +13,7 @@
             <ul class="nav">
                 <li><a href="#AddNewOrdert"> Add New Order </a></li>
                 <li><a href="#ShowOrders"> Show Order </a></li>
+                <li><a href="#BookList"> Book List </a></li>
             </ul>
         </div>
         <div class="col-md-9">
@@ -23,11 +22,12 @@
 
     </div>
 
-</div><!-- /.container -->
-
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-resource.min.js"></script>
 <script src="js/app.js"></script>
-<script src="js/tmp.js"></script>
-
+<script src="js/controllers.js"></script>
+<script src="js/services.js"></script>
 </body>
 </html>
