ApacheCXF cors trouble

--- a/src/webClient/index.html
+++ b/src/webClient/index.html
@@ -13,7 +13,7 @@
             <ul class="nav">
                 <li><a href="#AddNewOrdert"> Add New Order </a></li>
                 <li><a href="#ShowOrders"> Show Order </a></li>
-                <li><a href="#BookList"> Book List </a></li>
+                <li><a href="#book-list"> Book List </a></li>
             </ul>
         </div>
         <div class="col-md-9">
